# eo_as_pcie_project

./: .gitignore  CMakeLists.txt
eo_as_pcie_driver/: .eo_as_dma.o.d  CMakeLists.txt  Makefile  eo_as_device.h  eo_as_dma.c  eo_as_dma.h  eo_as_ioctl.c  eo_as_ioctl.h  eo_as_pci_driver.mod.c  eo_as_pcie.c  hal_hwlayer.c  hal_hwlayer.h  lin_isr.c  lin_isr.h
include/: public.h
lib/: CMakeLists.txt  eo_as_interface_lib.cpp  eo_as_interface_lib.h
src/: CMakeLists.txt  config_reader.cpp  config_reader.h  shared_state.h  tcp_client.cpp  tcp_client.h  tcp_commands_server.cpp  tcp_commands_server.cpp.save  tcp_commands_server.h
tests/: CMakeLists.txt  main.cpp  test_eo_as_interface.cpp
